Fixed all Warnings
- Fixed all imports.
- Extracted all duplicated into separate methods.
- Renamed some packages to align with Java standards.
- All subcommand lists are now actually a List instead of an array.
- Made the standard kit items use some new standards to make them faster and more reliable.
- A lot of other stuff, but I'm too lazy to explain right now because I have a meeting in like 20 minutes.